--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pandas = "^2.0.1"
-numpy = "^1.24.3"
+pandas = "1.5.3"
+numpy = "^1.18"
 sympy = "^1.11.1"
 matplotlib = "^3.7.1"
 lmfit = "^1.2.0"
+pytest = "^7.3.1"
 
 
 [build-system]
