--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,11 @@ numpy = "^1.18"
 sympy = "^1.11.1"
 matplotlib = "^3.7.1"
 lmfit = "^1.2.0"
-pytest = "^7.3.1"
-
+pytest = { version = ">=7.1.1", optional = true }
+pytest-cov = { version = ">=3.0.0", optional = true }
+tox = { version = ">=3.24.5", optional = true }
+tox-conda = { version = ">=0.9.2", optional = true}
+pint = "^0.20.1"
 
 [tool.poetry.extras]
 test = ["pytest", "pytest-cov"]
