--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ tox-conda = { version = ">=0.9.2", optional = true}
 pint = "^0.20.1"
 
 [tool.poetry.extras]
-test = ["pytest", "pytest-cov"]
+test = ["pytest", "pytest-cov", "tox", "tox-conda"]
 
 
 [tool.coverage.run]
