--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,13 @@ description = "Compute atomic force microscope cantilever dissipation and freque
 authors = ["John A. Marohn <jam99@cornell.edu>"]
 license = "MIT License"
 readme = "README.md"
+
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
-
-
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -28,6 +26,7 @@ tox = { version = ">=3.24.5", optional = true }
 tox-conda = { version = ">=0.9.2", optional = true}
 pint = "^0.20.1"
 jupyter = "^1.0.0"
+tqdm = "^4.66"
 
 [tool.poetry.extras]
 test = ["pytest", "pytest-cov", "tox", "tox-conda"]
