--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ tox-conda = { version = ">=0.9.2", optional = true}
 pint = "^0.20.1"
 jupyter = "^1.0.0"
 tqdm = "^4.66"
+numba = "^0.58"
 
 [tool.poetry.extras]
 test = ["pytest", "pytest-cov", "tox", "tox-conda"]
