--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8"
 pandas = "1.5.3"
 numpy = "^1.24"
 sympy = "^1.11.1"
