--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
-python = ">=3.9"
+python = "3.10.2"
 pandas = "1.5.3"
 numpy = "^1.24"
 sympy = "^1.11.1"
@@ -32,6 +32,7 @@ sphinx = "^7.3.7"
 sphinx-rtd-theme = "^2.0.0"
 h5py = "^3.11.0"
 freqdemod = {git = "https://github.com/JohnMarohn/FreqDemod.git"}
+numba-scipy = "^0.4.0"
 
 [tool.poetry.extras]
 test = ["pytest", "pytest-cov", "tox", "tox-conda"]
