--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ h5py = "^3.11.0"
 freqdemod = {git = "https://github.com/JohnMarohn/FreqDemod.git"}
 numba-scipy = "^0.4.0"
 seaborn = "^0.13.2"
+tables = "3.10"
 
 [tool.poetry.extras]
 test = ["pytest", "pytest-cov", "tox", "tox-conda"]
