--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,12 @@ freqdemod = {git = "https://github.com/JohnMarohn/FreqDemod.git"}
 numba-scipy = "^0.4.0"
 seaborn = "^0.13.2"
 tables = "3.10"
+jupyter-contrib-nbextensions = "^0.7.0"
+notebook = "6.4.12"
+traitlets = "5.9.0"
+jupyter-nbextensions-configurator = "^0.6.4"
+jupyter-server = "<2"
+autopep8 = "^2.3.2"
 
 [tool.poetry.extras]
 test = ["pytest", "pytest-cov", "tox", "tox-conda"]
