--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ traitlets = "5.9.0"
 jupyter-nbextensions-configurator = "^0.6.4"
 jupyter-server = "<2"
 autopep8 = "^2.3.2"
+torch = "^2.8.0"
 
 [tool.poetry.extras]
 test = ["pytest", "pytest-cov", "tox", "tox-conda"]
