--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ jupyter-nbextensions-configurator = "^0.6.4"
 jupyter-server = "<2"
 autopep8 = "^2.3.2"
 torch = "^2.8.0"
+multiprocess = "^0.70.18"
 
 [tool.poetry.extras]
 test = ["pytest", "pytest-cov", "tox", "tox-conda"]
